icons fixes, header padding fixes, double scroll removed

--- a/src/widgets/header/ui/mobile/style.module.scss
+++ b/src/widgets/header/ui/mobile/style.module.scss
@@ -74,7 +74,6 @@
 }
 
 .ArrowBtn {
-  background-image: url("/img/icon/HeaderMobile.svg");
   width: 16px;
   height: 8px;
   background-repeat: no-repeat;
@@ -88,7 +87,7 @@
   height: 12px;
   background-repeat: no-repeat;
   background-size: cover;
-  margin: 0px 5%;
+  margin: 0px 20px;
 }
 
 
